--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "ts-typeorm": "TS_NODE_PROJECT=./tsconfig.json node --require ts-node/register ./node_modules/.bin/typeorm",
+    "migration:run:local": "yarn ts-typeorm migration:run  --config ormconfig.js -c local",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
@@ -29,7 +31,9 @@
     "graphql": "^15.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
